tests/compilation/errors.stderr
error: unknown attribute
 --> tests/compilation/errors.rs:1:24
  |
1 | #[dyn_utils::dyn_trait(unknown)]
  |                        ^^^^^^^

error: expected `=`
 --> tests/compilation/errors.rs:6:1
  |
6 | #[dyn_utils::dyn_trait(trait)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `dyn_utils::dyn_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid trait name
  --> tests/compilation/errors.rs:11:32
   |
11 | #[dyn_utils::dyn_trait(trait = ?)]
   |                                ^

error: expected `=`
  --> tests/compilation/errors.rs:16:1
   |
16 | #[dyn_utils::dyn_trait(remote)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `dyn_utils::dyn_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected identifier
  --> tests/compilation/errors.rs:21:33
   |
21 | #[dyn_utils::dyn_trait(remote = ?)]
   |                                 ^

error: attribute must be used on a method with Return Position Impl Trait
  --> tests/compilation/errors.rs:28:7
   |
28 |     #[dyn_trait()]
   |       ^^^^^^^^^

error: expected `=`
  --> tests/compilation/errors.rs:34:24
   |
34 |     #[dyn_trait(storage)]
   |                        ^

error: expected identifier
  --> tests/compilation/errors.rs:40:27
   |
40 |     #[dyn_trait(storage = ?)]
   |                           ^

error: `try_sync` must be used on async methods
  --> tests/compilation/errors.rs:47:5
   |
47 |     fn method(&self) -> impl Iterator<Item = ()>;
   |     ^^

error: `try_sync` must be used on async methods
  --> tests/compilation/errors.rs:53:5
   |
53 |     fn method(&self) -> impl Future;
   |     ^^

error: `try_sync` must be used on async methods
  --> tests/compilation/errors.rs:59:5
   |
59 |     fn method(&self) -> impl Future<Item = ()>;
   |     ^^

error: attribute must be used on a method with Return Position Impl Trait
  --> tests/compilation/errors.rs:64:7
   |
64 |     #[dyn_trait(unknown)]
   |       ^^^^^^^^^

error: `sync` must be used on async method
  --> tests/compilation/errors.rs:74:5
   |
74 |     fn method(&self) {}
   |     ^^

error[E0046]: not all trait items implemented, missing: `method`
  --> tests/compilation/errors.rs:72:1
   |
69 |     fn method(&self);
   |     ----------------- `method` from trait
...
72 | impl SyncOnSyncMethod for () {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `method` in implementation
